--- a/FG_GameplayMathsCPP.uproject
+++ b/FG_GameplayMathsCPP.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "FG_GameplayMathsCPP",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"GameplayCameras"
+			]
 		}
 	],
 	"Plugins": [
